--- a/contact.html
+++ b/contact.html
@@ -120,18 +120,18 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="col-md-6 contact-left">
 					<address>
 						<p>De lunes a domingo, las 24 horas.</p><br>
-								<p>Celular directo de Priscila Rodriguez (Directivo Quinta Región):</p>
-								<p>(+56 9) 9375445.</p>
-								<p>E-mail directo de Priscila:</p>
-								<p>butproducciones@gmail.com</p>
+								<!--<p>Celular directo de Priscila Rodriguez (Directivo Quinta Región):</p>-->
+								<!--<p>(+56 9) 9375445.</p>-->
+								<!--<p>E-mail directo de Priscila:</p>-->
+								<!--<p>butproducciones@gmail.com</p>-->
 								<!--<p>FAX: +1 800 889 9898</p>-->
 								<!--<p>E-mail: <a href="mailto:example@mail.com">example@mail.com</a></p>-->
 					</address>
 					<address>
 								<p>Celular directo de Héctor Ceballos (Directivo Región metropolitana):</p>
-								<p>(+56 9) 51094738.</p>
-								<p>E-mail directo de Héctor:</p>
-								<p>ceballosaviles@gmail.com</p>
+								<!--<p>(+56 9) 51094738.</p>-->
+								<!--<p>E-mail directo de Héctor:</p>-->
+								<!--<p>ceballosaviles@gmail.com</p>-->
 								<!--<p>FAX: +1 800 889 9898</p>-->
 								<!--<p>E-mail: <a href="mailto:example@mail.com">example@mail.com</a></p>-->
 					</address>
