--- a/services.html
+++ b/services.html
@@ -209,8 +209,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<address>
 			<!--<p>Promodelos.</p>-->
 				<!--<p>ictinos 1500, peñalolen, Chile.</p>-->
-				<p>Celular directo de Priscila : <br>(+56 9) 51094738.</p>
-				<p>Celular directo de Héctor   : <br>(+56 9) 51094738.</p>
+				<!--<p>Celular directo de Priscila : <br>(+56 9) 51094738.</p>-->
+				<!--<p>Celular directo de Héctor   : <br>(+56 9) 51094738.</p>-->
 			</address>
 			</div>
 			<div class="col-md-3 specials1">
