--- a/contact.html
+++ b/contact.html
@@ -128,7 +128,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								<!--<p>E-mail: <a href="mailto:example@mail.com">example@mail.com</a></p>-->
 					</address>
 					<address>
-								<p>Celular directo de Héctor Ceballos (Directivo Región metropolitana):</p>
+								<!--<p>Celular directo de Héctor Ceballos (Directivo Región metropolitana):</p>-->
 								<!--<p>(+56 9) 51094738.</p>-->
 								<!--<p>E-mail directo de Héctor:</p>-->
 								<!--<p>ceballosaviles@gmail.com</p>-->
